fix font to more legible one

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Englebert&family=Indie+Flower&family=Permanent+Marker&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Permanent+Marker&display=swap?family=Inconsolata&family=Ubuntu+Sans+Mono:ital@0;1&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,7 @@
 }
 
 button {
-  font-family: "Englebert", cursive;
+  font-family: "Inconsolata", monospace;
   background-color: #777b76;
   font-size: min(5vw, 1.5rem);
   letter-spacing: 0.2rem;
@@ -27,7 +27,7 @@ button:hover {
 /* starting menu style */
 
 .startMenuContainer {
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("icons/background.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -35,7 +35,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  font-family: "Englebert", cursive;
+  font-family: "Inconsolata", monospace;
 }
 
 .title {
@@ -57,7 +57,7 @@ button:hover {
 
 .authorMessage,
 .authorMessage a {
-  font-family: "Englebert", cursive;
+  font-family: "Inconsolata", monospace;
   font-size: 1.2rem;
   color: #394f41;
   transition: 0.2s ease;
@@ -215,6 +215,7 @@ button:hover {
   padding-left: 15px;
   margin: 20px 0;
 }
+
 .playerOneContainer.oneLayout .boardControlsContainer {
   display: flex;
   flex-direction: column;
@@ -229,7 +230,7 @@ button:hover {
   gap: 10px;
 }
 .boardControlsContainer button {
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   width: min(30vw, 200px);
   opacity: 1;
   visibility: visible;
@@ -269,7 +270,7 @@ button:hover {
   min-height: 270px;
 }
 .selectionBoard .boardName {
-  font-family: "Englebert", cursive;
+  font-family: "Inconsolata", monospace;
   background-color: #777b76;
   font-size: min(5vw, 1.5rem);
   letter-spacing: 0.2rem;
